# rag-tutorial

./: README.md  main.py  mise.toml  pyproject.toml  ruff.toml
src/: app.py  main.py  search.py
src/utils/: chunk_data.py  generate_embeddings.py  load_dataset.py  mongo_driver.py
